[package]
name = "tiptoe"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Intrusive reference counting. Implement once non-generically for both `Arc` and `Rc`, no overhead."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/tiptoe"
homepage = "https://github.com/Tamschi/tiptoe/tree/v0.0.1"
documentation = "https://docs.rs/tiptoe/0.0.1"
keywords = ["arc", "rc", "intrusive"]
categories = ["rust-patterns"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[features]
sync = []

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/tiptoe" }
is-it-maintained-open-issues = { repository = "Tamschi/tiptoe" }
maintenance = { status = "experimental" } # This may differ between branches.

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
pin-project = "1.0.8"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"

[dependencies]
abort = "0.1.3"
tap = "1.0.1"

[package.metadata.docs.rs]
all-features = true
targets = [] # Default target only, as there are no platform differences.
